check_output.txt
    Checking flora v26.0.1 (/home/elza/repository/flora_desktop/flora)
warning: unused imports: `Physical` and `Size`
 --> src/backend/winit.rs:6:13
  |
6 | ...::{Size, Physical},
  |       ^^^^  ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `render` found for mutable reference `&mut ...` in the current scope
   --> src/main.rs:625:26
    |
625 | ...er.render(ou...
    |       ^^^^^^ method not found in `&mut ...`
    |
    = help: items from traits can only be used if the trait is in scope
    = note: the full name for the type has been written to '/home/elza/repository/flora_desktop/flora/target/debug/deps/flora-234f9b52e35bd148.long-type-7493141061500034574.txt'
    = note: consider using `--verbose` to print the full type name to the console
help: trait `Renderer` which provides `render` is implemented but not in scope; perhaps you want to import it
    |
  1 + use smithay::backend::renderer::Renderer;
    |

warning: variable does not need to be mutable
  --> src/backend/winit.rs:19:10
   |
19 | ...t (mut backend, e...
   |       ----^^^^^^^
   |       |
   |       help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src/main.rs:121:26
    |
121 | ...d, mut winit_event_loop, o...
    |       ----^^^^^^^^^^^^^^^^
    |       |
    |       help: remove this `mut`

warning: unused variable: `input_event`
   --> src/main.rs:141:43
    |
141 | ...ut(input_event) => {
    |       ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_input_event`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0599`.
warning: `flora` (bin "flora") generated 4 warnings
error: could not compile `flora` (bin "flora") due to 1 previous error; 4 warnings emitted
